--- a/WebContent/css/mobile.css
+++ b/WebContent/css/mobile.css
@@ -28,7 +28,7 @@ header .nav.on div a { flex:1; height: 38px; border-left: 1px solid #eee; line-h
 header .nav.on .close { position: absolute; right: 24px; top: 24px; width: 12px; height: 12px; color:transparent;}
 header .nav.on .close:before { content: ""; position: absolute; left:46%; top: 0; width: 1px; height: 100%; background: #5a5a5a; transform: rotate(45deg);}
 header .nav.on .close:after { content: ""; position: absolute; right:45%; top: 0; width: 1px; height: 100%; background: #5a5a5a; transform: rotate(-45deg);}
-header h2 { margin: 0 0 75px 0; width: 132px; height: 50px; background: url("../images/layout.png") no-repeat 0 -70px; color:transparent;}
+header h2 { margin: 0 0 34px 0; width: 132px; height: 69px; background: url("../images/logo.png") no-repeat 0 8px; color:transparent;}
 .dim { display: none;position: fixed; left: 0; top: 0; z-index: 100; width: 100%; height: 100%; background: rgba(0,0,0,0.5);}
 
 
