--- a/WebContent/css/index.css
+++ b/WebContent/css/index.css
@@ -58,9 +58,10 @@ body, html {
 .scroll-container {
 	width: 100%;
 	height: 100%;
-/* 	position: relative; */
+  	position: relative;  
 	margin: 0;
 	padding: 0;
+	z-index:-1;
 }
 
 .scroll-container section {
